--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
@@ -110,5 +111,5 @@
       }
     }
   },
-  "defaultProject": "inrodent"
+  "defaultProject": "introdent"
 }
